fixes mega fail on small image grid for signel posts

--- a/_dev/scss/mod/_single.scss
+++ b/_dev/scss/mod/_single.scss
@@ -23,15 +23,11 @@ p{
   color: white;
 }
 
-.single-post{
-  img{
-
+section.single-post img{
     width: 50%;
     float:left;
-    &:first-of-type{
-      width: 100%;
-      float: none;
-    }
-
-  }
+}
+section.single-post img:first-of-type{
+    width: 100%;
+    float:none;
 }
